bindable viewmodels + UnoProgressRing

--- a/SimpleWeather.Uno/SimpleWeather.Uno.Shared/Controls/LocationPanel.xaml
+++ b/SimpleWeather.Uno/SimpleWeather.Uno.Shared/Controls/LocationPanel.xaml
@@ -79,7 +79,7 @@
                 </LinearGradientBrush>
             </Grid.Background>
         </Grid>
-        <muxc:ProgressRing
+        <local:UnoProgressRing
             Grid.RowSpan="2"
             Grid.ColumnSpan="3"
             Width="36"
