--- a/SimpleWeather.Uno/SimpleWeather.Uno.Shared/Controls/HourlyForecastItemPanel.xaml
+++ b/SimpleWeather.Uno/SimpleWeather.Uno.Shared/Controls/HourlyForecastItemPanel.xaml
@@ -6,9 +6,11 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:SimpleWeather.UWP.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:not_win="http://uno.ui/not_win"
+    xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     d:DesignHeight="300"
     d:DesignWidth="1280"
-    mc:Ignorable="d">
+    mc:Ignorable="d not_win">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -37,17 +39,17 @@
             ScrollViewer.VerticalScrollBarVisibility="Disabled"
             ScrollViewer.VerticalScrollMode="Disabled"
             SelectionMode="None">
-            <ItemsControl.ItemTemplate>
+            <ListView.ItemTemplate>
                 <DataTemplate x:DataType="controls:HourlyForecastItemViewModel">
                     <local:HourlyForecastItem />
                 </DataTemplate>
-            </ItemsControl.ItemTemplate>
-            <ItemsControl.ItemsPanel>
+            </ListView.ItemTemplate>
+            <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
                     <ItemsStackPanel Orientation="Horizontal" />
                 </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-            <ItemsControl.ItemContainerStyle>
+            </ListView.ItemsPanel>
+            <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Style.Setters>
                         <Setter Property="MinWidth" Value="0" />
@@ -57,13 +59,13 @@
                         <Setter Property="Template">
                             <Setter.Value>
                                 <ControlTemplate>
-                                    <ContentPresenter />
+                                    <ContentPresenter not_win:Content="{TemplateBinding Content}" not_win:ContentTemplate="{TemplateBinding ContentTemplate}" />
                                 </ControlTemplate>
                             </Setter.Value>
                         </Setter>
                     </Style.Setters>
                 </Style>
-            </ItemsControl.ItemContainerStyle>
+            </ListView.ItemContainerStyle>
         </ListView>
         <Button
             x:Name="RightButton"
