--- a/SimpleWeather.Uno/SimpleWeather.Uno.Shared/Themes/MaterialColorsOverride.xaml
+++ b/SimpleWeather.Uno/SimpleWeather.Uno.Shared/Themes/MaterialColorsOverride.xaml
@@ -50,6 +50,10 @@
 
             <!--  Outline  -->
             <Color x:Key="OutlineColor">#79747E</Color>
+
+            <!-- Custom -->
+            <StaticResource x:Key="PrimarySurfaceColor" ResourceKey="PrimaryColor" />
+            <StaticResource x:Key="OnPrimarySurfaceColor" ResourceKey="OnPrimaryColor" />
         </ResourceDictionary>
 
         <!--  Dark Theme  -->
@@ -101,6 +105,10 @@
 
             <!--  Outline  -->
             <Color x:Key="OutlineColor">#938F99</Color>
+
+            <!-- Custom -->
+            <StaticResource x:Key="PrimarySurfaceColor" ResourceKey="SurfaceColor" />
+            <StaticResource x:Key="OnPrimarySurfaceColor" ResourceKey="OnSurfaceColor" />
         </ResourceDictionary>
 
     </ResourceDictionary.ThemeDictionaries>
