--- a/SimpleWeather.Uno/SimpleWeather.Uno.Shared/Setup/SetupLocationsPage.xaml
+++ b/SimpleWeather.Uno/SimpleWeather.Uno.Shared/Setup/SetupLocationsPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:android="http://uno.ui/android"
+    xmlns:ios="http://uno.ui/ios"
     xmlns:contract6Present="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,6)"
     xmlns:contract7NotPresent="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,7)"
     xmlns:contract7Present="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,7)"
@@ -17,15 +18,11 @@
     xmlns:not_win="http://uno.ui/not_win"
     xmlns:skia="http://uno.ui/skia"
     xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    d:Background="{ThemeResource SimpleBlueDarkBrush}"
+    d:Background="{ThemeResource PrimarySurfaceColor}"
     x:DefaultBindMode="OneWay"
     Background="Transparent"
     NavigationCacheMode="Enabled"
-    mc:Ignorable="d android not_win skia">
-
-    <Page.Resources>
-        <ResourceDictionary Source="ms-appx:///Setup/SetupLocationspage.Resources.xaml" />
-    </Page.Resources>
+    mc:Ignorable="d android ios not_win skia">
 
     <Grid>
         <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Auto">
@@ -40,10 +37,10 @@
                     Margin="0,25"
                     RelativePanel.Above="SearchContainer"
                     RelativePanel.AlignHorizontalCenterWithPanel="True">
-                    <win:SymbolIcon Foreground="White" Symbol="Map" />
+                    <win:SymbolIcon Foreground="{ThemeResource OnPrimarySurfaceColor}" Symbol="Map" />
                     <not_win:FontIcon
                         FontSize="96"
-                        Foreground="White"
+                        Foreground="{ThemeResource OnPrimarySurfaceColor}"
                         Glyph="&#xE707;" />
                 </Viewbox>
                 <win:Border
@@ -53,7 +50,6 @@
                     RelativePanel.AlignVerticalCenterWithPanel="True">
                     <localControls:ProgressAutoSuggestBox
                         x:Name="LocationSearchBox"
-                        Background="#F0FFFFFF"
                         Footer="{x:Bind LocationSearchViewModel.Footer, Mode=OneWay}"
                         IsSuggestionListOpen="{x:Bind LocationSearchViewModel.Locations, Converter={StaticResource collectionBooleanConverter}, Mode=OneWay}"
                         ItemsSource="{x:Bind LocationSearchViewModel.Locations, Mode=OneWay}"
@@ -62,7 +58,6 @@
                         Style="{ThemeResource LocationQuerySearchBoxStyle}"
                         SuggestionChosen="Location_SuggestionChosen"
                         Tapped="LocationSearchBox_Tapped"
-                        TextBoxStyle="{StaticResource ProgressAutoSuggestBoxTextBoxOverAccentStyle}"
                         TextChanged="Location_TextChanged" />
                 </win:Border>
                 <not_win:Border
@@ -70,47 +65,51 @@
                     RelativePanel.AlignLeftWithPanel="True"
                     RelativePanel.AlignRightWithPanel="True"
                     RelativePanel.AlignVerticalCenterWithPanel="True">
-                    <localControls:ProgressAutoSuggestBox
-                        x:Name="LocationSearchBox"
-                        Background="{ThemeResource AutoSuggestTextBoxBackground}"
-                        Footer="{x:Bind LocationSearchViewModel.Footer, Mode=OneWay}"
-                        IsSuggestionListOpen="{x:Bind LocationSearchViewModel.Locations, Converter={StaticResource collectionBooleanConverter}, Mode=OneWay}"
-                        ItemsSource="{x:Bind LocationSearchViewModel.Locations, Mode=OneWay}"
-                        PlaceholderText="{helpers:StringRes Name='setup_location_prompt'}"
-                        QuerySubmitted="Location_QuerySubmitted"
-                        RelativePanel.AlignLeftWithPanel="True"
-                        RelativePanel.AlignRightWithPanel="True"
-                        RelativePanel.AlignVerticalCenterWithPanel="True"
-                        Style="{ThemeResource LocationQuerySearchBoxStyle}"
-                        SuggestionChosen="Location_SuggestionChosen"
-                        Tapped="LocationSearchBox_Tapped"
-                        TextChanged="Location_TextChanged" />
+                    <Grid>
+                        <localControls:ProgressAutoSuggestBox
+                            x:Name="LocationSearchBox"
+                            x:Load="{x:Bind ShowSearchBox}"
+                            Footer="{x:Bind LocationSearchViewModel.Footer, Mode=OneWay}"
+                            IsSuggestionListOpen="{x:Bind LocationSearchViewModel.Locations, Converter={StaticResource collectionBooleanConverter}, Mode=OneWay}"
+                            ItemsSource="{x:Bind LocationSearchViewModel.Locations, Mode=OneWay}"
+                            PlaceholderText="{helpers:StringRes Name='setup_location_prompt'}"
+                            QuerySubmitted="Location_QuerySubmitted"
+                            Style="{ThemeResource LocationQuerySearchBoxStyle}"
+                            SuggestionChosen="Location_SuggestionChosen"
+                            TextChanged="Location_TextChanged" />
+                        <Grid
+                            x:Name="SearchBar"
+                            Background="{ThemeResource SurfaceColor}"
+                            CornerRadius="4"
+                            Tapped="LocationSearchBox_Tapped"
+                            MaxWidth="1080"
+                            Padding="8">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0" Padding="8" Foreground="{ThemeResource OnSurfaceColor}" Text="{helpers:StringRes Name='setup_location_prompt'}" />
+                            <SymbolIcon
+                                Grid.Column="1"
+                                Foreground="{ThemeResource OnSurfaceColor}"
+                                Symbol="Find"
+                                Margin="0,0,8,0"/>
+                        </Grid>
+                    </Grid>
                 </not_win:Border>
                 <Button
                     Name="GPSButton"
                     Grid.Row="1"
                     HorizontalAlignment="Center"
                     not_win:Margin="0,10"
+                    not_win:Background="{ThemeResource SecondaryContainerColor}"
+                    not_win:Foreground="{ThemeResource OnSecondaryContainerColor}"
                     skia:Visibility="Collapsed"
                     win:Margin="10"
                     Click="GPS_Click"
                     IsEnabled="{x:Bind LocationSearchViewModel.IsLoading, Converter={StaticResource inverseBoolConverter}}"
                     RelativePanel.AlignHorizontalCenterWithPanel="True"
                     RelativePanel.Below="SearchContainer">
-                    <win:Button.Resources>
-                        <SolidColorBrush x:Key="ButtonBackground" Color="#FFFFFFFF" />
-                        <SolidColorBrush x:Key="ButtonBackgroundPointerOver" Color="#C5FFFFFF" />
-                        <SolidColorBrush x:Key="ButtonBackgroundPressed" Color="#87FFFFFF" />
-                        <StaticResource x:Key="ButtonBackgroundDisabled" ResourceKey="ControlFillColorDisabledBrush" />
-                        <SolidColorBrush x:Key="ButtonForeground" Color="{ThemeResource AppColor}" />
-                        <SolidColorBrush x:Key="ButtonForegroundPointerOver" Color="#C5000000" />
-                        <SolidColorBrush x:Key="ButtonForegroundPressed" Color="#C5000000" />
-                        <StaticResource x:Key="ButtonForegroundDisabled" ResourceKey="TextFillColorDisabledBrush" />
-                        <StaticResource x:Key="ButtonBorderBrush" ResourceKey="ControlElevationBorderBrush" />
-                        <StaticResource x:Key="ButtonBorderBrushPointerOver" ResourceKey="ControlElevationBorderBrush" />
-                        <StaticResource x:Key="ButtonBorderBrushPressed" ResourceKey="ControlStrokeColorDefaultBrush" />
-                        <StaticResource x:Key="ButtonBorderBrushDisabled" ResourceKey="ControlStrokeColorDefaultBrush" />
-                    </win:Button.Resources>
                     <Button.Content>
                         <StackPanel Orientation="Horizontal">
                             <TextBlock
@@ -135,7 +134,7 @@
                     Margin="10"
                     HorizontalAlignment="Center"
                     android:Visibility="{x:Bind LocationSearchViewModel.IsLoading}"
-                    Foreground="White"
+                    Foreground="{ThemeResource OnPrimarySurfaceColor}"
                     IsActive="{x:Bind LocationSearchViewModel.IsLoading}"
                     IsIndeterminate="True"
                     RelativePanel.AlignHorizontalCenterWithPanel="True"
