--- a/SimpleWeather.Uno/SimpleWeather.Uno.Shared/App.xaml
+++ b/SimpleWeather.Uno/SimpleWeather.Uno.Shared/App.xaml
@@ -2,22 +2,23 @@
     x:Class="SimpleWeather.Uno.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:android="http://uno.ui/android"
     xmlns:controls="using:SimpleWeather.Common.Controls"
     xmlns:converters="using:SimpleWeather.Uno.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:helpers="using:SimpleWeather.Uno.Helpers"
+    xmlns:ios="http://uno.ui/ios"
     xmlns:localControls="using:SimpleWeather.Uno.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:mtuc="using:CommunityToolkit.WinUI.UI.Controls"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:muxm="using:Microsoft.UI.Xaml.Media"
     xmlns:not_win="http://uno.ui/not_win"
-    xmlns:android="http://uno.ui/android"
-    xmlns:ios="http://uno.ui/ios"
+    xmlns:skia="http://uno.ui/skia"
     xmlns:toolkitControls="using:CommunityToolkit.WinUI.UI.Controls"
     xmlns:toolkitConverters="using:CommunityToolkit.WinUI.UI.Converters"
     xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    mc:Ignorable="d not_win">
+    mc:Ignorable="d android ios skia not_win">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -28,14 +29,18 @@
                 <android:MaterialColors xmlns="using:Uno.Material" OverrideSource="ms-appx:///Themes/MaterialColorsOverride.xaml" />
                 <android:MaterialFonts xmlns="using:Uno.Material" />
                 <android:MaterialResources xmlns="using:Uno.Material" />
+                <!--<skia:MaterialColors xmlns="using:Uno.Material" OverrideSource="ms-appx:///Themes/MaterialColorsOverride.xaml" />
+                <skia:MaterialFonts xmlns="using:Uno.Material" />
+                <skia:MaterialResources xmlns="using:Uno.Material" />-->
 
-                <!-- Load Uno.Cupertino resources -->
-                <ios:CupertinoColors xmlns="using:Uno.Cupertino"  />
+                <!--  Load Uno.Cupertino resources  -->
+                <ios:CupertinoColors xmlns="using:Uno.Cupertino" />
                 <ios:CupertinoResources xmlns="using:Uno.Cupertino" />
 
                 <!--  Load Uno.Toolkit.UI resources  -->
                 <ToolkitResources xmlns="using:Uno.Toolkit.UI" />
                 <android:MaterialToolkitResources xmlns="using:Uno.Toolkit.UI.Material" />
+                <!--<skia:MaterialToolkitResources xmlns="using:Uno.Toolkit.UI.Material" />-->
 
                 <!--  Load custom resources  -->
                 <localControls:DataTemplates />
